# eventpulse

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py  metrics.py
app/models/: event.py
app/routers/: events.py  health.py
app/schemas/: event.py
app/tasks/: process_event.py
docs/: architecture.md  chaos-testing.md  cicd.md  deploy-aws.md  kubernetes.md  setup.md  terraform.md
k8s/: namespace.yaml
k8s/configmaps/: app-config.yaml
k8s/deployments/: celery-worker.yaml  fastapi.yaml  redis.yaml
k8s/hpa/: fastapi-hpa.yaml  worker-hpa.yaml
k8s/ingress/: ingress.yaml
k8s/jobs/: migration-job.yaml
k8s/monitoring/: grafana.yaml  prometheus-config.yaml  prometheus-rules.yaml  prometheus.yaml
k8s/secrets/: example.yaml
k8s/services/: fastapi.yaml
migrations/: env.py
migrations/versions/: 001_create_events_table.py
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: README.md  aws-bootstrap.sh  chaos-verify.js  k8s-apply.sh  load-test.js  setup-dev.sh  spike-test.js
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf
tests/: test_events_get.py  test_events_post.py  test_health.py  test_main.py
worker/: main.py
(+2 files in other folders)
